[gd_scene load_steps=7 format=3 uid="uid://bgpgu24gsg723"]

[ext_resource type="PackedScene" uid="uid://dxx2elvn8s6am" path="res://scenes/character/character.tscn" id="1_vsqam"]
[ext_resource type="Script" path="res://scenes/character/enemy/enemy.gd" id="2_nnuxe"]
[ext_resource type="SpriteFrames" uid="uid://ddbffav2787u0" path="res://tress/sf_angry_pig.tres" id="3_ysqn6"]
[ext_resource type="Script" path="res://scenes/utility/hit_box.gd" id="4_hkswn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2w8b3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3vr0l"]
radius = 14.0

[node name="Enemy" groups=["enemy"] instance=ExtResource("1_vsqam")]
collision_layer = 4
collision_mask = 7
script = ExtResource("2_nnuxe")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = ExtResource("3_ysqn6")
animation = &"Walk"
frame_progress = 0.153348

[node name="CollisionShape2D" parent="." index="1"]
visible = false
shape = SubResource("CircleShape2D_2w8b3")

[node name="HurtBox" parent="." index="2"]
visible = false
collision_layer = 128

[node name="HitBox" type="Area2D" parent="." index="3"]
visible = false
position = Vector2(0, 4)
collision_layer = 64
collision_mask = 0
script = ExtResource("4_hkswn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CircleShape2D_3vr0l")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." index="6"]

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
